# identification_controllers

./: readme.md
multisine_estimation_controllers/: CMakeLists.txt  package.xml  plugin.xml  readme.md
multisine_estimation_controllers/include/multisine_estimation_controllers/: multisine_estimation_controllers.h
multisine_estimation_controllers/src/multisine_estimation_controllers/: multisine_estimation_controllers.cpp
